Tue Mar 19 02:40:00 2002  Si Mong Park  <spark@ociweb.com>

        * ace/OS_String.h:
        * ace/OS_String.inl:
        * ace/OS_String.cpp:
          Corrected proper ACE_HAS_REENTRANT_FUNCTIONS macro checking location
          for the strtok_r_emulation functions.  Debian compilation error was
          because ACE_HAS_REENTRANT_FUNCTIONS was not defined in the configuration.
          If ACE_HAS_REENTRANT_FUNCTIONS is defined, then emulation functions
          should not be visible.

Mon Mar 19 08:32:34 2002  Boris Kolpackov  <bosk@ipmce.ru>
	* THANKS: Added Chen Jian <jchen@huawei.com> to the Hall of fame.
	
Sun Mar 17 18:22:12 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* include/makeinclude/platform_freebsd.GNU: Copy lines from
	  platform_linux.GNU.  exceptions=1 is now the default,
	  unless overridden by the user, just like for Linux.

Sun Mar 17 11:53:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/compiler.bor:
          When doing a wchar build don't automatically define UNICODE and _UNICODE.

Fri Mar 15 18:08:28 2002  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-4.x.h: Removed the optional setting of
          ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION for Visual Age C++
          5 without __TEMPINC__ set. This was an experiment to try and
          rid the build of all the "duplicate symbol" warnings, and it
          broke the incremental builds.

Fri Mar 15 12:19:58 2002  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/platform_vxworks5.x_ghs.GNU:

          Added support for building with exceptions enabled.

Fri Mar 15 05:59:45 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/SPIPE_Acceptor.cpp: Removed the ACE_ASSERT (result == FALSE)
	  macro call.  Thanks to Oleg Burlachenko <ua_fireball@yahoo.com>
 	  for reporting this.

Fri Mar 15 00:16:06 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* include/makeinclude/platform_freebsd.GNU: